# polinko

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .polinko_memory.db-shm  .polinko_memory.db-wal  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  client.py  config.py  eval_regression.py  golden_prompts.json  main.py  mypy.ini  package-lock.json  package.json  prompts.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.in  requirements.notebook.txt  requirements.txt  server.py  try.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.playwright/: cli.config.json
api/: __init__.py  app_factory.py  eval_viz.py  manual_evals_surface.py  portfolio_sankey.py
configs/: golden_prompts.json  memory_facts.json
core/: __init__.py  history_store.py  prompts.py  rate_limit.py  responses_parse.py  retrieval.py  runtime.py  vector_store.py
docs/: AGENT_BUILDER_MIRROR.md  ARCHITECTURE.md  BACKEND_START_TO_END.md  BINARY_EVAL_LOGIC_REFINEMENT.md  BUILD_AUDIT_LOG.md  CHARTER.md  DECISIONS.md  DECISIONS_LEDGER.md  EVAL_BACKEND_MAP.md  EVAL_POLICY_MODEL.md  EVAL_SPEC.md  EVAL_V2_BACKEND_MAP.md  EVAL_V2_SPEC.md  EVAL_WIRING_SPEC.md  FIGMA_NODE_TRACKER.md  HUMAN_REFERENCE_DB.md  HYBRID_OPENAI_ADOPTION_PLAN.md  MINIMAL_CONFIG_BENCHMARK_SPEC.md  README.md  RUNBOOK.md  RUNTIME_DB_VISUALS.md  SESSION_HANDOFF.md  STATE.md  UI_EVAL_ADAPTER_CONTRACT.md  clip_ab_eval_cases.json  file_search_eval_cases.json  hallucination_eval_cases.json  ocr_eval_cases.json  (+4 more)
(+929 files in other folders)
